force-app/main/default/objects/Order_Form__c/Order_Form__c.object-meta.xml
<CustomObject>
    <description>Used by sales team to convey order entry information to order entry personnel, child object of opportunity</description>
    <label>Order Form</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Order Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>