force-app/main/default/objects/Order_Form__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Contact</description>
    <inlineHelpText>Related Contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Forms</relationshipLabel>
    <relationshipName>Order_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>