force-app/main/default/objects/Order_Form__c/fields/Discount_information__c.field-meta.xml
<CustomField>
    <fullName>Discount_information__c</fullName>
    <label>Discount information</label>
    <type>TextArea</type>
</CustomField>