force-app/main/default/objects/Order_Form__c/fields/Discount_is_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Discount_is_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount is Exempt</label>
    <type>Checkbox</type>
</CustomField>