force-app/main/default/objects/Order_Form__c/fields/Free_Financing_Requested__c.field-meta.xml
<CustomField>
    <fullName>Free_Financing_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Financing Requested</label>
    <type>Checkbox</type>
</CustomField>