force-app/main/default/objects/Order_Form__c/fields/more_info_comments__c.field-meta.xml
<CustomField>
    <fullName>more_info_comments__c</fullName>
    <label>More Info Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>