force-app/main/default/objects/Order_Form__c/fields/Multi_Card_Split_Information__c.field-meta.xml
<CustomField>
    <fullName>Multi_Card_Split_Information__c</fullName>
    <inlineHelpText>This is where you enter information on how each card in a split will be charged</inlineHelpText>
    <label>Multi-Card Split Information</label>
    <type>TextArea</type>
</CustomField>