force-app/main/default/objects/Order_Form__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Opportunity</description>
    <inlineHelpText>related opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Order Forms</relationshipLabel>
    <relationshipName>Order_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>