force-app/main/default/objects/Order_Form__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Order</description>
    <inlineHelpText>Related Order</inlineHelpText>
    <label>Order</label>
    <referenceTo>kugo2p__SalesOrder__c</referenceTo>
    <relationshipLabel>Order Form</relationshipLabel>
    <relationshipName>Order_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>