force-app/main/default/objects/Order_Form__c/fields/Order_Description__c.field-meta.xml
<CustomField>
    <fullName>Order_Description__c</fullName>
    <label>Order Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>