force-app/main/default/objects/Order_Form__c/fields/Order_Has_Discount__c.field-meta.xml
<CustomField>
    <fullName>Order_Has_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Has Discount</label>
    <type>Checkbox</type>
</CustomField>