force-app/main/default/objects/Order_Form__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <label>Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Two Months</fullName>
            </value>
            <value>
                <fullName>Six Months</fullName>
            </value>
            <value>
                <fullName>Nine Months</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>