force-app/main/default/objects/Order_Form__c/fields/Special_Financing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Financing_Terms__c</fullName>
    <inlineHelpText>Where to define financing terms if &quot;other&quot; is chosen</inlineHelpText>
    <label>Special Financing Terms</label>
    <type>TextArea</type>
</CustomField>