force-app/main/default/objects/Order_Form__c/fields/user_entering__c.field-meta.xml
<CustomField>
    <fullName>user_entering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>user assigned to enter the order</inlineHelpText>
    <label>User Entering</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>