force-app/main/default/objects/Order_Form__c/validationRules/Statuses_That_Require_An_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Statuses_That_Require_An_Order</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Approved&quot;)&amp;&amp;  Order__c = Null || ISPICKVAL(Status__c,&quot;Awaiting AM Approval&quot;) &amp;&amp;  Order__c = Null ||
ISPICKVAL(Status__c,&quot;Complete&quot;) &amp;&amp;  Order__c = Null</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>An Order Must be Associated with the Order Form to set the status to &quot;Approved&quot;, &quot;Awaiting AM Approval&quot; or &quot;Complete&quot;</errorMessage>
</ValidationRule>